# FLREditor

./: .gitignore  Cargo.toml  README.md
samples/: gen_demo_samples.py  gen_varied.py  make_sample.sh
schemas/: employee_120.toml  pos_100_multi.toml  product_80.toml  sample_120.toml  zengin_120_multi.toml
src/: app.rs  encoding.rs  main.rs  record.rs  schema.rs  theme.rs
src/ui/: filter.rs  hex_view.rs  mod.rs  schema_editor.rs  search_bar.rs  spreadsheet_view.rs  table_view.rs
