[package]
name = "flr-editor"
version = "0.1.0"
edition = "2021"
description = "Fixed-Length Record editor for financial data (egui + wgpu)"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.29"
egui_extras = "0.29"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
